[tool.poetry]
name = "perception-dev-tools"
version = "0.1.0"
description = ""
authors = ["zhangshuaiqing <zhangshuaiqing123@126.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
open3d = "^0.19.0"
fire = "^0.7.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
